--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -70,9 +70,18 @@
           <p>Bugfix for return time on movements to own cities. </p>
         </app-script-version>
 
-
-
       </div>
+
+      <app-indexer-update></app-indexer-update>
+      <br/>
+      <br/>
+
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-12">
+    </div>
+  </div>
+
 </div>
