--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -64,3 +64,14 @@ app-root {
     // 100 viewport - header - footer
     min-height: calc(100vh - 70px - 75px);
 }
+
+.overlay-msg {
+  position: fixed;
+  bottom: 50px;
+  left: 100px;
+  width: calc(100vw - 200px);
+  z-index: 1000000000;
+
+  border: 5px solid darkred;
+  background-color: #fff4e5;
+}
