--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -29,6 +29,14 @@
       <!--</app-alert>-->
 
 
+<!--      <app-alert type="error" title="16 Feb 2022: Forum report indexing is temporarily disabled" [dismissible]="false">-->
+<!--        <p>-->
+<!--          <strong>Due to a change in the structure of forum reports after the recent Grepolis update, we have disabled the option to index reports from your alliance forum.</strong><br/>-->
+<!--          We have to update our parser to be able to handle the new format. The feature will be enabled again as soon as a fix is in place.<br/>-->
+<!--          Indexing reports from your inbox is still possible, please let us know if you encounter any issues there.-->
+<!--        </p>-->
+<!--      </app-alert>-->
+
       <mat-card *ngIf="['intel', 'player', 'alliance', 'town', 'team'].indexOf(active_tab)>=0" class="search-card">
         <app-index-search *ngIf="account_confirmed"></app-index-search>
       </mat-card>
@@ -58,11 +66,6 @@
       <span *ngIf="active_tab === 'commands'"><app-demo-overview></app-demo-overview></span>
       <span *ngIf="active_tab === 'changelog'"><app-changelog></app-changelog></span>
       <span *ngIf="active_tab === 'faq'">
-
-        <div style="padding: 20px 20px 0">
-          <app-indexer-update></app-indexer-update>
-        </div>
-
         <mat-card class="index-card">
           <h2><mat-icon>help_outline</mat-icon>&nbsp;Frequently asked questions</h2>
           <h4>Can't find what you are looking for? Feel free to <a class="a-link-dialog" (click)="showContactDialog()">send us a message</a> and we will responds as soon as possible.</h4>
