--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -127,13 +127,15 @@
               </div>
             </div>
           </div>
-<!--          <app-alert type="error" title="Grepolis API is offline: Data unavailable" *ngIf="server=='en'||server=='pt'">-->
+
+<!--          <app-alert type="error" title="Grepolis API Offline: Data Unavailable" *ngIf="server=='en'||server=='pt'" [dismissible]="false">-->
 <!--            <h3>-->
-<!--              The Grepolis API for this server is offline. We have to wait for Grepolis to fix the issue.<br/>-->
+<!--              The Grepolis API for the EN and PT servers is offline. We have to wait for Grepolis to fix the issue.<br/>-->
 <!--              As a result, the scoreboard can not be updated and all players in this world will start to show as inactive.<br/>-->
-<!--              We are sorry for the inconvenience, but there is nothing we can do about the issue.-->
+<!--              We are sorry for the inconvenience, but there is nothing we (as a third party) can do about the issue.-->
 <!--            </h3>-->
 <!--          </app-alert>-->
+
 	        <div style="display: flex; place-content: center; width: 100%;" [ngClass]="{'loading-overlay':loadingPlayers}">
 	          <div style="max-width: 100%;"
 	               #overviewContainer class="row hidden-xs text-center"
