--- a/src/app/auth/confirm-delete/confirm-delete.component.html
+++ b/src/app/auth/confirm-delete/confirm-delete.component.html
@@ -13,7 +13,7 @@
 				<h4>When you click on the button below, your account will be deleted. <strong>This can not be undone.</strong></h4>
 				<br/>
 
-				<app-alert type="success" title="Password reset complete!" *ngIf="success" [dismissible]="false">
+				<app-alert type="success" title="Account removal complete!" *ngIf="success" [dismissible]="false">
 					<h5>Your account has been deleted.</h5>
 				</app-alert>
 
